<resources>
    <string name="app_name">LandMarker</string>
    <string name="swipe_left_for_register">Press here to get to Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Press here to go to Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Name</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="welcome_to_the_gulag">welcome to the gulag</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="AIzaSyBBBQKEfeFtDTE4KcNJsuO_vGWwQ7qV9kQ">API</string>
    <string name="permission_required_toast"> permission_required_toast</string>
    <string name="permission_rationale_location">permission_rationale_location</string>
    <string name="location_permission_denied">location_permission_denied</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>